@@ -6,17 +6,26 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Test cases
 
+% requires
+['source-highlight']
+
 % source
 data/testcases.txt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Filters
 
+% requires
+['dot', 'lilypond']
+
 % source
 data/filters-test.txt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Tables
+
+% requires
+['source-highlight']
 
 % source
 ../examples/website/newtables.txt
@@ -29,6 +38,9 @@ data/oldtables.txt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Source highlighter
+
+% requires
+['source-highlight']
 
 % source
 ../doc/source-highlight-filter.txt
@@ -116,6 +128,10 @@ Example slideshow
 % backends
 ['slidy']
 
+% requires
+['source-highlight']
+
+
 % source
 ../doc/slidy-example.txt
 
@@ -155,6 +171,9 @@ LaTeX Math
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 LaTeX Filter
 
+% requires
+['latex', 'dvipng']
+
 % source
 ../doc/latex-filter.txt
 
@@ -175,6 +194,9 @@ data/utf8-examples.txt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Additional Open Block and Paragraph styles
+
+% requires
+['source-highlight', 'dot']
 
 % source
 data/open-block-test.txt
